# zi-music

./: .gitignore  README.md  package-lock.json  package.json
scripts/: rust-build.cmd  tauri-build.cmd  tauri-dev.cmd
server/: package-lock.json  package.json
server/src/: index.js
server/src/lib/: bilibili.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
web/: index.html  package-lock.json  package.json  vite.config.js
web/src/: App.jsx  storage.js  styles.css
